# kara

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PKGBUILD  README.md  out.txt
.github/workflows/: ci.yml  release.yml
crates/kara-beautify/: Cargo.toml
crates/kara-beautify/src/: apply.rs  config.rs  daemon.rs  desktop.rs  floorp_profile.rs  history.rs  ini_patch.rs  ipc.rs  main.rs  popover.rs  reload.rs  svg_border.rs  wallpaper_agent.rs
crates/kara-beautify/src/doctor/: checks.rs  mod.rs
crates/kara-beautify/src/state/: mod.rs  paths.rs  runtime.rs
crates/kara-beautify/src/wallpaper/: extract.rs  mod.rs
crates/kara-color/: Cargo.toml
crates/kara-color/src/: lib.rs
crates/kara-config/: Cargo.toml
crates/kara-config/src/: keybind.rs  lib.rs  parse.rs  types.rs
crates/kara-config/tests/: parse_full.rs
crates/kara-gate/: Cargo.toml
crates/kara-gate/src/: actions.rs  animation.rs  backend_udev.rs  backend_winit.rs  blur.rs  cursor.rs  input.rs  ipc.rs  layout.rs  main.rs  render.rs  state.rs  video.rs  wallpaper.rs  workspace.rs
crates/kara-gate/src/shaders/: blur.frag
crates/kara-glimpse/: Cargo.toml
crates/kara-glimpse/src/: main.rs  overlay.rs  selection.rs
crates/kara-ipc/: Cargo.toml
crates/kara-ipc/src/: client.rs  frame.rs  lib.rs  message.rs  server.rs
crates/kara-sight/: Cargo.toml
crates/kara-sight/src/: lib.rs  render.rs  status.rs  text.rs
crates/kara-summon/: Cargo.toml
crates/kara-summon/src/: beautify_ipc.rs  desktop.rs  filter.rs  main.rs  picker.rs  thumb.rs  ui.rs
crates/kara-theme/: Cargo.toml
crates/kara-theme/src/: derive.rs  lib.rs  resolved.rs  spec.rs  validate.rs
crates/kara-theme/src/render/: floorp.rs  foot.rs  fzf.rs  gtk.rs  kara_gate.rs  kitty.rs  mod.rs  nvim.rs  session.rs  tmux.rs
crates/kara-ui/: Cargo.toml
crates/kara-ui/src/: blur.rs  canvas.rs  lib.rs  text.rs
crates/kara-veil/: Cargo.toml
crates/kara-veil/src/: main.rs  pam.rs  ui.rs
crates/kara-whisper/: Cargo.toml
crates/kara-whisper/src/: dbus.rs  main.rs  notification.rs  popover_ipc.rs  ui.rs
crates/vwm-bar/: Cargo.toml
crates/vwm-bar/src/: lib.rs
crates/vwm-config/: Cargo.toml
crates/vwm-config/src/: lib.rs
crates/vwm-wl/: Cargo.toml
crates/vwm-wl/src/: actions.rs  input.rs  layout.rs  main.rs  state.rs
example/: kara-beautify.toml  kara-gate.conf
session/: kara  kara-portals.conf  kara.desktop
themes/cloud/: theme.toml
themes/default/: theme.toml
themes/ember/: theme.toml
themes/fantasy/: theme.toml
themes/moonlight/: theme.toml
themes/natural/: theme.toml
themes/vague/: theme.toml
