[package]
name = "kara-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wayland compositor for the kara desktop environment"
authors = ["Charlton Moren"]

[[bin]]
name = "kara-gate"
path = "src/main.rs"

[dependencies]
smithay = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kara-config = { path = "../kara-config" }
kara-sight = { path = "../kara-sight" }
kara-ipc = { path = "../kara-ipc" }
signal-hook = "0.3"
xcursor = "0.3"
# gif + webp features added for D2 (animated wallpapers). gif ships
# a frame iterator the wallpaper renderer uses to drive its timer.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
dirs = "6"
tiny-skia = { workspace = true }
cosmic-text = { workspace = true }
xkbcommon = "0.8"
