[package]
name = "kara-glimpse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Screenshot tool for the kara desktop environment"
authors = ["Charlton Moren"]

[[bin]]
name = "kara-glimpse"
path = "src/main.rs"

[dependencies]
kara-ipc = { path = "../kara-ipc" }
