[package]
name = "kara-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC protocol for the kara desktop environment"
authors = ["Charlton Moren"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
