[package]
name = "kara-sight"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Status bar rendering for the kara desktop environment"
authors = ["Charlton Moren"]

[dependencies]
kara-config = { path = "../kara-config" }
kara-ui = { path = "../kara-ui" }
tiny-skia = { workspace = true }
cosmic-text = { workspace = true }
chrono = { workspace = true }
