[package]
name = "kara-summon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application launcher for the kara desktop environment"
authors = ["Charlton Moren"]

[[bin]]
name = "kara-summon"
path = "src/main.rs"

[dependencies]
kara-ipc = { path = "../kara-ipc" }
kara-ui = { path = "../kara-ui" }
