[package]
name = "kara-summon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application launcher for the kara desktop environment"
authors = ["Charlton Moren"]

[[bin]]
name = "kara-summon"
path = "src/main.rs"

[dependencies]
kara-ipc = { path = "../kara-ipc" }
kara-ui = { path = "../kara-ui" }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
tiny-skia = { workspace = true }
dirs = "6"
xkbcommon = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
