[package]
name = "kara-summon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application launcher for the kara desktop environment"
authors = ["Charlton Moren"]

[[bin]]
name = "kara-summon"
path = "src/main.rs"

[dependencies]
kara-ipc = { path = "../kara-ipc" }
kara-ui = { path = "../kara-ui" }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
tiny-skia = { workspace = true }
dirs = "6"
xkbcommon = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
# Wallpaper thumbnail decode for the picker's wallpaper row (B9b.1).
# Same feature set as kara-beautify's image dep so any wallpaper
# kara-beautify accepts can be previewed.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff"] }
# Video thumbnail extraction for .mp4/.mkv/.webm wallpapers. Pulls
# the first decoded frame via a short-lived appsink pipeline — same
# stack as kara-gate's video wallpaper renderer.
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }
